--- a/src/components/formContainer/LoginForm/Login.css
+++ b/src/components/formContainer/LoginForm/Login.css
@@ -7,32 +7,21 @@
 
 .padding_container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    padding: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* padding: 1.5rem; */
     width: 100%;
     height: auto;
-    column-gap: 1rem !important;
+    /* column-gap: 1rem !important; */
 }
 
 .padding_container .image-login-container {
     flex-grow: 1 !important;
-    max-width: 500px;
+    max-width: var(--image-container-size);
     background-image: url('login-image.jpg');
     background-size: cover;
     background-position: center;
-    order: 1;
-    border-radius: 0.6rem;
-}
-
-.image-login-container div {
-    margin: 2rem auto !important;
-    width: 50%;
-}
-
-.image-login-container div img {
-    /* margin: 10px auto; */
-    width: 100%;
-
+    /* order: 1; */
+    /* border-radius: 5rem 0rem 0rem 5rem; */
 }
 
 
@@ -104,7 +93,8 @@
     font-size: clamp(1.2rem, 1.4rem, 1.6rem)
 }
 
-input:focus~label {
+input:focus~label,
+.input-field input:valid~label {
     transform: translateY(-51%) translateX(-10px) scale(0.8);
     background-color: #fff;
     padding: 0px 5px;
