--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,10 @@
 
     --opacity_transition: opacity 0.4s 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
 
-    --slide_container_size: 22class="button-signUp" rem
+    --slide_container_size: 22rem;
+
+    --image-container-size: 520px;
+    --border-image-container: 0rem 5rem 5rem 0rem
 }
 
 * {
@@ -93,6 +96,9 @@ hr {
 }
 
 .section_container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.6rem;
     width: calc(100% - var(--lateral-menu-width));
     margin: 0 0 0 var(--lateral-menu-width);
     transition: all 0.7s ease;
@@ -115,6 +121,13 @@ hr {
     width: 100%;
     /* background-color: teal; */
 }
+
+.input-iconSearch-container input:focus {
+    outline: none;
+    border: solid 1px var(--cor-destaque);
+
+}
+
 
 .search-top-menu input {
     /* padding: 1.5rem; */
@@ -168,10 +181,10 @@ hr {
 
 .form_container_login_and_signIn {
     display: flex;
-    width: 90%;
+    width: 60%;
     min-height: 80%;
     /* height: 100%; */
-    max-width: 1000px;
+    max-width: 900px;
     background-color: #F5F5F5;
     overflow: hidden;
     border-radius: var(--border-Radius);
@@ -193,7 +206,17 @@ hr {
     padding: 3.5rem;
 }
 
+.image-login-container div img,
+.image-signUp-container div img {
+    margin: 10px auto;
+    width: 100%;
+}
 
+.image-login-container div,
+.image-signUp-container div {
+    margin: 2rem auto !important;
+    width: 50%;
+}
 
 /* Estilos para telas grandes (desktops) */
 @media (min-width: 1200px) {
@@ -247,6 +270,12 @@ hr {
         width: 32rem;
         padding: 2rem;
     }
+
+    .padding_container .image-signUp-container {
+        /* height: auto; */
+        border-radius: 0rem
+    }
+
 
 }
 
@@ -316,6 +345,34 @@ hr {
 
     }
 
+    .form_container_login_and_signIn {
+        width: 80%;
+        max-width: 80rem;
+    }
+
+    .logo_login {
+        display: none;
+    }
+
+    .form_container {
+        width: 100%;
+        padding: 3.5rem;
+    }
+
+    .form_container .logo_login {
+        display: block;
+    }
+
+    .padding_container .image-signUp-container,
+    .padding_container .image-login-container {
+        border-radius: 0rem
+    }
+
+
+    .image-signUp-container div,
+    .image-login-container div {
+        padding: 1rem;
+    }
 
 }
 
@@ -379,23 +436,31 @@ hr {
 
     }
 
-    .cards_infos_container .Card_carousel_title {
-        font-size: 3rem !important;
-        width: 100%;
+    .form_container_login_and_signIn {
+        width: 70%;
+        /* max-width: 40rem; */
     }
 
-    .Card_corousel_subtitle {
-        font-size: 1.3rem !important;
-        font-weight: 300;
-        color: rgba(255, 255, 255, 0.774);
-        /* display: none; */
+    .form_container {
+        padding: 1.5rem 3.5rem 2.5rem 3.5rem;
     }
 
-    .padding_container {
-        /* display: grid; */
-        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-
+    .padding_container .image-signUp-container,
+    .padding_container .image-login-container {
+        border-radius: 0rem
     }
+
+    .image-signUp-container div,
+    .image-login-container div {
+        padding: 1rem;
+    }
+
+    .padding_container .image-login-container {
+        order: -1;
+    }
+
+
+
 
     /* .image-login-container {
         display: none;
@@ -448,21 +513,21 @@ hr {
         /* flex-grow: 2; */
     }
 
-    .cards_infos_container .Card_carousel_title {
-        font-size: 1.5rem !important;
-        width: 100%;
-    }
-
-    .Card_corousel_subtitle {
-        font-size: 1rem !important;
-        /* content: 'hoje é dia de ' !important; */
+    .form_container_login_and_signIn {
+        width: 90%;
+        min-height: 80%;
     }
 
     /* Login form */
     .form_container {
         width: 100%;
-        padding: 1rem !important;
-        background-image: var(--cor-texto-e-icon);
+        padding: 0rem 2.5rem 2.5rem 2.5rem;
+        background-color: var(--cor-fundo-menu);
+        /* background-image: url('signUp.jpg') !important; */
+    }
+
+    .image-signUp-container div {
+        padding: 1rem;
     }
 
     .logo_login {
@@ -470,7 +535,7 @@ hr {
     }
 
     .padding_container .image-login-container {
-        order: 0;
+        order: -1;
     }
 
 }
