--- a/src/components/MenuCategory/Menu.css
+++ b/src/components/MenuCategory/Menu.css
@@ -1,1 +1,23 @@
- .menu_category_item_container {}
+ .Menu_category_container {
+     margin-bottom: 1.3rem;
+ }
+
+ .menu_category_item_container {
+     display: flex;
+     justify-content: space-evenly;
+     column-gap: 1rem;
+     padding: 0;
+     margin: 0;
+     overflow-x: auto;
+ }
+
+ .menu_category_item_container li {
+     display: inline-flex;
+     align-items: center;
+     list-style: none;
+     width: 100px;
+     text-align: center;
+     white-space: nowrap;
+     background-color: rgb(137, 233, 129);
+     padding: 1rem;
+ }
