--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@ html {
 body {
     overflow-x: hidden !important;
     /* width: 100vw; */
-    background-color: var(--cor-fundo-menu);
+    background-color: var(--background-color) !important;
 }
