--- a/src/components/MenuCategory/Menu.css
+++ b/src/components/MenuCategory/Menu.css
@@ -9,7 +9,7 @@
     padding: 0;
     margin: 0;
     overflow-x: auto;
-    height: 5.6rem;
+    height: 4.6rem;
 }
 
 .menu_category_item_container::-webkit-scrollbar {
@@ -42,7 +42,7 @@
     background-color: var(--cor-principal);
     transition: background-Color 0.2s ease-in-out;
     color: white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
 .menu_category_item_container .ativo>span {
