--- a/src/pages/produtos/CardsProduto/CardsProduto.css
+++ b/src/pages/produtos/CardsProduto/CardsProduto.css
@@ -1,3 +1,12 @@
+.title_category {
+    /* color: red; */
+    padding: 1rem 0rem;
+}
+
+.title_category h2 {
+    text-transform: capitalize;
+}
+
 .produtos_container div {
     background-color: var(--cor-fundo-menu);
 }
@@ -52,6 +61,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     color: #727272;
+    padding: 0.5rem 0rem;
 }
 
 .ingredient_container .showIngredient {
@@ -61,8 +71,7 @@
 }
 
 .ingredient_container .arrow_icon {
-    /* display: inline-flex; */
-    /* align-items: start; */
+    padding-top: 0.4rem;
     transform: rotateZ(0deg);
     font-size: 1.4rem;
     cursor: pointer;
