--- a/src/components/MenuCategory/Menu.css
+++ b/src/components/MenuCategory/Menu.css
@@ -7,9 +7,9 @@
     justify-content: space-between;
     column-gap: 1rem;
     padding: 0;
-    margin: 0;
+    margin: var(--margin-lg) 0rem;
     overflow-x: auto;
-    height: 4.6rem;
+    /* height: 4.6rem; */
 }
 
 .menu_category_item_container::-webkit-scrollbar {
@@ -27,14 +27,17 @@
 .category_item button {
     align-items: center;
     display: inline-flex;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     padding: 0.1rem 1.6rem;
     background-color: var(--cor-fundo-menu);
     color: var(--cor-texto-e-icon);
+    font-weight: bolder;
     border-radius: var(--border-Radius);
     border: none;
-    height: 3.5rem;
+    /* height: 3.5rem; */
+    padding: var(--margin-sm);
 
 }
 
@@ -45,13 +48,13 @@
     /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
-.menu_category_item_container .ativo>span {
+.menu_category_item_container .ativo>.mdi::before {
     color: white;
 }
 
 
-.category_item span {
-    color: var(--cor-texto-e-icon);
-    font-size: 2.4rem;
-    padding-right: .3rem;
+.category_item button span {
+    color: var(--cor-principal);
+    font-size: 3rem;
+    /* padding-right: .3rem; */
 }
