--- a/src/components/carrosel/Carousel.css
+++ b/src/components/carrosel/Carousel.css
@@ -11,6 +11,13 @@
     margin: 0px 0px 3rem 0rem;
 }
 
+.slick-dots {
+    position: relative;
+    bottom: 0px !important;
+    height: 2rem !important;
+    /* background-color: violet; */
+}
+
 
 .slick-list .card {
     border: none;
@@ -47,7 +54,7 @@
 }
 
 .slick-dots li button::before {
-    color: var(--cor-destaque) !important;
+    color: var(--cor-principal) !important;
     /* background-color: rebeccapurple; */
 }
 
