--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
 /* Estilos Globais */
 
 :root {
+    --margin-xxs: 0.25rem;
+    --margin-xs: 0.5rem;
+    --margin-sm: 0.75rem;
+    --margin-md: 1rem;
+    --margin-lg: 1.5rem;
+    --margin-xl: 2rem;
+    --margin-xxl: 3rem;
+    --margin-xxxl: 4rem;
 
     /* Colors */
     --menu_color: #ffffff;
@@ -78,10 +86,17 @@ a {
 }
 
 .material-symbols-outlined {
+    height: 3.6rem;
+}
+
+.material-symbols-outlined,
+.mdi {
     display: inline-flex;
     align-items: center;
     color: var(--cor-texto-e-icon);
-    /* fill: 1 !important; */
+    /* stroke: #4CAF50 !important; */
+    /* fill: 0 !important; */
+    /* font-variation-settings: 'FILL' 0 !important; */
 }
 
 hr {
@@ -105,7 +120,7 @@ hr {
 .section_container {
     display: flex;
     flex-direction: column;
-    row-gap: 2rem;
+    row-gap: var(--margin-sm);
     width: calc(100% - var(--lateral-menu-width));
     margin: 0 0 0 var(--lateral-menu-width);
     transition: all 0.7s ease;
