--- a/src/components/MenuCategory/Menu.css
+++ b/src/components/MenuCategory/Menu.css
@@ -54,7 +54,7 @@
 
 
 .category_item button span {
-    color: var(--cor-principal);
+    color: var(--cor-texto-e-icon);
     font-size: 3rem;
     /* padding-right: .3rem; */
 }
