--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,12 +5,12 @@
 
 .products_infos_container {
     width: 100% !important;
-    flex-grow: 2;
+    /* flex-grow: 2; */
 }
 
 .user_location_container {
-    flex-grow: 1;
-    width: 80% !important;
+    /* flex-grow: 1; */
+    max-width: 250px;
     /* flex-grow: 2; */
     background-color: orangered;
 }
