--- a/src/pages/produtos/CardsProduto/CardsProduto.css
+++ b/src/pages/produtos/CardsProduto/CardsProduto.css
@@ -22,8 +22,8 @@
 }
 
 .produto_card:hover {
-    transform: scale(1.01);
-    transition: all 0.2s ease-in-out;
+    /* transform: scale(1); */
+    /* transition: all 0.2s ease-in-out; */
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     /* background-color: red; */
 }
