--- a/src/index.css
+++ b/src/index.css
@@ -211,9 +211,12 @@ hr {
     overflow: hidden;
     border-radius: var(--border-Radius);
     /* transform: translateY(-120%); */
-    /* transition: transform 2s 0.2s ease-in-out; */
+    /* transition: transform 0.4s 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); */
 }
 
+/* .animateForm {
+    transform: translateY(0%);
+} */
 
 .form_container {
     display: flex;
