--- a/src/components/formContainer/SignupForm/Signup.css
+++ b/src/components/formContainer/SignupForm/Signup.css
@@ -9,3 +9,42 @@
     order: -1;
     height: auto;
 }
+
+.button_loader_container {
+    position: relative;
+
+}
+
+.loader {
+    position: absolute;
+    top: 0.5rem;
+    right: 2rem;
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: white !important;
+    border-radius: 50%;
+}
+
+.loader {
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: transparent;
+    width: 24px !important;
+    height: 24px !important;
+}
+
+.loader {
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: transparent;
+    width: 36px;
+    height: 36px;
+    animation: spin89345 1s linear infinite;
+}
+
+@keyframes spin89345 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
