--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -91,6 +91,33 @@ header {
     padding: 0rem 5rem 0rem 2.8rem;
 }
 
+.cart_and_infosUser_container {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+}
+
+.user_infos_container {
+    display: inline-flex;
+    align-items: center;
+    /* justify-content: center; */
+    column-gap: 0.8rem;
+}
+
+.user_infos_container figure {
+    width: 3.5rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0;
+}
+
+.user_infos_container img {
+    width: 100%;
+}
+
+.user_infos_container span {
+    font-size: 1.4rem
+}
 
 .lateral-logo {
     width: 2.4rem;
