--- a/src/components/formContainer/LoginForm/Login.css
+++ b/src/components/formContainer/LoginForm/Login.css
@@ -1,9 +1,19 @@
 /* Login form */
 
-
-.animate {
-    transform: translateY(0%);
+.login_form {
+    animation: fade 0.3s ease-in-out;
 }
+
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 
 .padding_container {
     display: grid;
@@ -27,10 +37,10 @@
 
 .form_heading h1 {
     width: 60%;
-    font-size: 2.5rem;
+    font-size: clamp(1.2rem, 3rem, 4rem);
     padding: 1.6rem 0rem;
     margin: 0;
-    color: var(--cor-destaque);
+    color: var(--cor-principal);
 }
 
 .form_heading p {
@@ -58,7 +68,10 @@
 
 
 .input-field input {
+    /* box-sizing: border-box; */
     position: relative;
+    display: inline;
+    align-items: center;
     padding: 10px 15px;
     font-size: 1.4rem;
     border-radius: 8px;
@@ -67,13 +80,15 @@
     width: 100%;
     border: transparent;
     /* background-color: red; */
-    height: 4rem;
+    height: 4rem !important;
     /* outline: none; */
+    transition: border-color 0.2s ease-in-out;
+    /* border-color: rgb(255, 0, 0) !; */
 }
 
 .input-field input:focus {
     outline: none;
-    border: solid 1px var(--cor-destaque);
+    border: solid 1px var(--cor-principal) !important;
 }
 
 
