--- a/src/components/OrdersContainer/CardOrders/CardOrder.css
+++ b/src/components/OrdersContainer/CardOrders/CardOrder.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     /* height: em; */
     column-gap: 1rem;
-    /* background-color: rgb(252, 234, 214); */
+    background-color: #01ac012a;
     border-radius: 0.8rem;
     padding: 0.5rem;
 }
@@ -52,6 +52,8 @@
     border-radius: 0.8rem;
     cursor: pointer;
     user-select: none;
+    height: 2.5rem !important;
+
 }
 
 
