--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -56,7 +56,7 @@
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
-    row-gap: 1.5rem;
+    row-gap: 0.5rem;
     overflow-y: auto;
     flex-grow: 1;
     /* background-color: wheat; */
@@ -69,19 +69,19 @@
     margin: 1.5rem auto;
 }
 
-.fess_container {
+.fees_container {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 
-.fess_container p {
+.fees_container p {
     /* letter-spacing: 1px; */
     font-size: 1.4rem !important;
     /* font-weight: 600; */
 }
 
-.fess_container span {
+.fees_container span {
     /* letter-spacing: 1px; */
     font-size: 1.3rem;
     /* font-weight: 600; */
@@ -96,6 +96,11 @@
 .order_button>button:hover>span {
     color: white !important;
     /* background-color: violet; */
+}
+
+.order_button .button-style {
+    display: inline-flex;
+    align-items: center;
 }
 
 .order_total p {
