--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -12,14 +12,15 @@
 
 .myShoppingCard_container {
     position: fixed;
-    min-height: 100vh !important;
+    min-height: calc(100vh + 5.6rem);
+    /* height: 100vh !important; */
     width: 28rem;
     background: var(--cor-fundo-menu);
-    top: 0;
+    top: 0rem;
     right: 0rem;
     z-index: 4;
     padding: 1rem;
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     transform: translateX(100%);
     transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 
