--- a/src/index.css
+++ b/src/index.css
@@ -273,6 +273,36 @@ hr {
     color: white;
 }
 
+
+.button_loader_container {
+    position: relative;
+
+}
+
+.loader {
+    position: absolute;
+    top: 0.5rem;
+    right: 2rem;
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: white !important;
+    border-radius: 50%;
+}
+
+.loader {
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: transparent;
+    width: 24px !important;
+    height: 24px !important;
+}
+
+.loader {
+    border: 4px solid rgba(0, 0, 0, .1);
+    border-left-color: transparent;
+    width: 36px;
+    height: 36px;
+    animation: spin89345 1s linear infinite;
+}
+
 /* Estilos para telas grandes (desktops) */
 @media (min-width: 1200px) {
 
