--- a/src/components/admin/BoasVindasContaiener/BoasVindas.css
+++ b/src/components/admin/BoasVindasContaiener/BoasVindas.css
@@ -1,5 +1,6 @@
 .admin_container {
-    background-color: rgb(190, 214, 188);
+    background-color: white;
+    padding: 2.4rem 0rem;
 }
 
 .saudação_text {
