--- a/src/components/admin/BoasVindasContaiener/BoasVindas.css
+++ b/src/components/admin/BoasVindasContaiener/BoasVindas.css
@@ -2,9 +2,10 @@
     background-color: white;
     padding: 2.4rem 0rem;
     border-radius: var(--border-Radius);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.saudação_text {}
+
 
 .saudação_text h1 {
     font-size: 5rem;
@@ -18,6 +19,8 @@
 }
 
 .adm_infos {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     margin-top: var(--margin-lg);
     /* background-color: tomato; */
 }
@@ -25,5 +28,32 @@
 .adm_infos .dash {
     width: 24rem;
     height: 24rem;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(202, 122, 122);
+    border-radius: var(--border-Radius);
+}
+
+/* Container principal */
+.dashboard-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 16px;
+    padding: 16px;
+    /* background-color: #f4f4f4; */
+    border-radius: 8px;
+
+}
+
+/* Estilo base para os dashes */
+.dash {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #dadada;
 }
