--- a/src/components/NavBar/toggleButton/ToggleButton.css
+++ b/src/components/NavBar/toggleButton/ToggleButton.css
@@ -5,6 +5,7 @@
     gap: 10px;
     font-family: Arial, sans-serif;
     font-size: 1.4rem;
+    width: 12rem;
 }
 
 /* Estilo do toggle switch */
@@ -58,4 +59,5 @@ input:checked+.slider:before {
 /* Texto dinâmico */
 .status-text {
     font-weight: bold;
+    min-width: 6.2rem;
 }
