--- a/src/pages/produtos/CardsProduto/CardsProduto.css
+++ b/src/pages/produtos/CardsProduto/CardsProduto.css
@@ -20,6 +20,7 @@
     width: 100%;
     border-radius: var(--border-Radius);
     /* height: max-content; */
+    transition: all 0.2s ease-in-out;
 }
 
 .produto_card:hover {
@@ -30,8 +31,33 @@
 }
 
 .produto_card figure {
+    position: relative;
     margin: 0;
 }
+
+.favorite_icon {
+    /* color: yellow !important; */
+    opacity: 0;
+    position: absolute;
+    right: 0.8rem;
+    /* top: 0.5rem; */
+    cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+    user-select: none;
+}
+
+.produtos_container>div:hover>figure>span {
+    color: rgb(248, 248, 248) !important;
+    border-radius: 50%;
+    opacity: 1;
+}
+
+.produtos_container>div:hover>figure>span:hover {
+    color: rgb(255, 231, 20) !important;
+    border-radius: 50%;
+    opacity: 1;
+}
+
 
 .produto_card figure img {
     width: 100%;
