--- a/src/pages/produtos/CardsProduto/CardsProduto.css
+++ b/src/pages/produtos/CardsProduto/CardsProduto.css
@@ -19,7 +19,7 @@
     padding: 1rem;
     width: 100%;
     border-radius: var(--border-Radius);
-    /* height: max-content; */
+    height: fit-content;
     transition: all 0.2s ease-in-out;
 }
 
